# ContamConverter

./: ContamConverter.py  README.md  pyproject.toml  requirements.txt
src/contamconverter/: __init__.py  cli.py
src/contamconverter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
