[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contamconverter"
version = "0.1.0"
description = "Command line tool for converting Contam FMU artifacts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ContamConverter = "contamconverter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contamconverter = ["files/*"]
